--- a/Server/package.json
+++ b/Server/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.18",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "tslint": "^6.1.3",
     "typescript": "^5.2.2"
   }
