--- a/Server/package.json
+++ b/Server/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.18",
+    "@types/uuid": "^9.0.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
     "tslint": "^6.1.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1"
   }
 }
